--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGO_URI=your_mongodb_atlas_connection_string
+MONGO_URI=mongodb+srv://paragpatil187:CZ0ylQSR7pEVa4Zg@cluster0.n46sems.mongodb.net/mernbook
 JWT_SECRET=your_jwt_secret
 CLIENT_URL=http://localhost:3000
